# professor-isaac

./: .env_exemplo  README.md  main.py  pyproject.toml
